[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
cmake = "^3.21"
pytesseract = "^0.3.10"
PyMuPDF = "^1.20.0"
python-docx = "^0.8.11"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
nltk = "^3.8.1"
rich = "^13.3.2"
python-pptx = "^0.6.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"